--- a/06/global.css
+++ b/06/global.css
@@ -1,2 +1,68 @@
-/*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+
+h1 {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  color: white;
+  font-weight: bold;
+  padding: 20px;
+  background-color: #64276A;
+  border-style: solid;
+  border-color: #7D3289;
+  border-width: 1px;
+  text-align: center;
+  font-size: 30px;
+}
+h2{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
+  text-align: center;
+  padding: 20px 20px 10px 20px;
+  background-color: #454545;
+  font-size: 20px;
+}
+p {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
+  text-align: ;
+  border-bottom: solid;
+  border-color: #D9D9D9;
+  background-color: #454545;
+  padding: 0px 30px 20px 20px;
+}
+
+.month{
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  color: white;
+  font-weight: bold;
+  text-decoration: underline;
+  background-color: #454545;
+  font-size: 25px;
+  padding: 12px 10px 10px 20px;
+  border-syle: solid;
+  border-color: red;
+  border-width: 5;
+}
+.festival{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
+  background-color: #454545;
+  font-size: 15px;
+  font-weight: normal;
+  margin-top: 15px;
+
+}
+a {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
+  background-color: black; 
+  font-size: 20px
+}
+
+
+
+
+
+
+
+
+
