--- a/07/global.css
+++ b/07/global.css
@@ -1,2 +1,69 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
+}
+
+h1 {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  text-align: center;
+  background: #83247D;
+  border-bottom: 1px solid #C535BD;
+  padding: 20px;
+  font-size: 30px;
+}
+
+#intro {
+  text-align: center;
+  font-size: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 40px;
+  background: #333333;
+  border-bottom: 1px solid white;
+}
+
+#intro h2 {
+  padding-left: 20px;
+}
+
+#intro p {
+  font-size: 16px;
+  text-align: left;
+  padding-top: 8px;
+}
+
+.month {
+  background: #333333;
+  padding-left: 20px;
+  color: yellow;
+  font-size: 15px;
+  border-bottom: 1px solid yellow;
+  padding-bottom: 227px;
+  padding-top: 20px;
+}
+
+.month h3 {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
+  font-size: 22px;
+  font-weight: bold;
+  text-decoration: underline;
+  text-transform: uppercase;
+  padding-bottom: 10px;
+}
+
+a {
+  background: black;
+  padding: 3px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: white;
+}
+
+.festival {
+  padding-top: 10px;
+}
