--- a/04/global.css
+++ b/04/global.css
@@ -1,2 +1,59 @@
 /*font-family: Georgia, Times, "Times New Roman", serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+body {
+  width:430px;
+  height: 800px;
+}
+
+h1, h2 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: bolder;
+}
+
+p, ul, ol {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1 {
+  color: #DE7300;
+  font-size: 30px;
+  border-bottom: 2px solid #DE7300;
+  text-align: center;
+  padding: 20px;
+}
+
+
+p {
+  background: #EDEBF1;
+  font-weight: bold;
+  text-align: justify;
+  margin: 20px;
+  padding: 20px;
+  font-size: 16px;
+}
+
+
+h2 {
+  text-decoration: underline;
+  font-size: 20px;
+  padding-left: 20px;
+}
+
+ul {
+  list-style-type: disc;
+  padding: 20px;
+  line-height: 120%;
+}
+
+ol {
+  padding: 0;
+  margin: 0;
+  text-align: left;
+}
+
+ol li {
+  list-style-type: decimal;
+  padding: 0px;
+  margin: 30px;
+}
