--- a/04/global.css
+++ b/04/global.css
@@ -2,26 +2,73 @@
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
 
 body {
-  font-family: Georgia, Times, "Times New Roman", serif;
-  text-align: center;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  
+}
+
+.indent {
+  margin-left: 20px;
 }
 
 h1 {
-  font-size: 40px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  text-align: center;
+  font-size: 30px;
   padding: 20px;
   letter-spacing: 0px;
-  color: white;
-  background-color: #0076FF;
+  color: #D56F00;
   font-weight: 600;
-  text-decoration: underline;
   border-bottom-style: solid;
-  border-bottom-color: white;
+  border-bottom-color: #D56F00;
   border-bottom-width: 2px;
 
 }
 
 p {
-  background-color: #00489C;
+  background-color: #EEEEEE;
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
   padding: 20px;
-  color: white;
+  font-size: 16px;
+  font-weight: 600;
 }
+
+h2 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  text-decoration: underline;
+  font-size: 20px;
+  font-weight: 600;
+
+}
+
+ul {
+  list-style-type: disc;
+  list-style-position: inside;
+  padding-top: 7px;
+  padding-bottom: 20px;
+  padding-left: 2px;
+  line-height: 20px;
+
+}
+
+ol {
+  list-style-type: decimal;
+  list-style-position: outside;
+  padding-right: 20px;
+  line-height: 20px;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+ol li {
+/*  margin-top: 2px;
+*/
+}
+
+
+
+
+
+
+
