--- a/05/global.css
+++ b/05/global.css
@@ -1,2 +1,66 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+body {
+  height: 800px;
+  width: 430px;
+  color: #FFFFFF;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1, h3 {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+
+}
+
+
+h2, h3, p {
+  background: #333333;
+
+}
+
+h1 {
+  background: #85277D;
+  text-align: center;
+  font-size: 30px;
+  padding: 20px;
+
+}
+
+h2 {
+  text-align: center;
+  font-size: 20px;
+  padding: 20px 20px 10px 20px;
+
+}
+
+#intro {
+  background-position: center top;
+  padding: 0px 30px 20px 21px;
+  font-size: 16px;
+  border-bottom: 1px solid #FFFFFF;
+}
+
+
+h3 {
+  font-size: 22px;
+  padding: 20px 20px 7px 20px;
+  text-decoration: underline;
+  text-transform: uppercase;
+
+}
+
+
+a:link {
+  color: #FFFFFF; 
+  background: #000000; 
+  text-decoration: none;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+p {
+  padding: 18px 0px 2px 21px;
+  font-size: 14px;
+  line-height: 100%;
+}
