--- a/12/global.css
+++ b/12/global.css
@@ -1,1 +1,36 @@
-/* Guess the font. Just get close--doesn't have to be perfect. */
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 5px;
+}
+
+
+
+.box {
+  float: left;
+  width: 26%;
+  margin: 10px;
+/*  padding-right: 10px;
+*/}
+
+.box h4 {
+  text-transform: capitalize;
+  font-weight: 500;
+  font-size: 80%;
+  padding-bottom: 5px ;
+}
+
+.box img {
+  float: left;
+}
+
+.blurb {
+  font-size: 70%;
+  line-height: 1.5em;
+  color: #ccc;
+}
+
+
+.clear {
+  clear: both;
+}
