--- a/07/global.css
+++ b/07/global.css
@@ -16,14 +16,13 @@ h2{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
   text-align: center;
-  padding: 20px 20px 10px 20px;
+  padding: 20px 20px 8px 20px;
   background-color: #454545;
   font-size: 20px;
 }
 p {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
-  text-align: ;
   border-bottom: solid;
   border-color: #D9D9D9;
   border-width: 1px;
@@ -38,10 +37,10 @@ p {
   text-decoration: underline;
   background-color: #454545;
   font-size: 25px;
-  padding: 12px 10px 30px 20px;
-  border-syle: solid;
-  border-color: red;
-  border-width: 5;
+  padding: 14px 10px 27px 20px;
+  border-bottom-style: solid;
+  border-color: white;
+  border-width: 1px;
 }
 .festival{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -49,17 +48,14 @@ p {
   background-color: #454545;
   font-size: 15px;
   font-weight: normal;
-  margin-top: 15px;
+  margin-top: 17px;
 }
 a {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
   background-color: black; 
   font-size: 20px;
-  margin-top: 5px;
-  border-bottom: solid
-  border-width: 2px;
-  border-color: white;
+  padding-bottom: 2px;
 }
 
 
