--- a/07/global.css
+++ b/07/global.css
@@ -42,8 +42,8 @@ h1 {
   color: yellow;
   font-size: 15px;
   border-bottom: 1px solid yellow;
-  padding-bottom: 27px;
-  padding-top: 20px;
+  padding-top: 22px;
+  padding-bottom: 20px
 }
 
 .month h3 {
