--- a/13/_framework.css
+++ b/13/_framework.css
@@ -1,5 +1,5 @@
 body.show_goal::after{
-  background-image: url("Your Screenshot Goes Here");
+  background-image: url("");
 }
 
 /* ------------------------------------------------------- */
