--- a/09/global.css
+++ b/09/global.css
@@ -1,2 +1,19 @@
 /* Actual font is unknown. Use this--it's close enough: */
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+.button_container{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 600;
+  text-align: center;
+  background-color: #557592;
+  padding: 15px;
+  margin: 20px;
+  border-radius: 7px;
+  width: 154px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+/*width will have to be a column thing*/
