--- a/09/global.css
+++ b/09/global.css
@@ -1,2 +1,26 @@
 /* Actual font is unknown. Use this--it's close enough: */
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+a {
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    font-size: 10px;
+}
+
+.subscribe {
+    display: inline-block;
+    background: #6388a5;
+    border-radius: 5px;
+    padding: 6px 10px 7px 10px; 
+    margin: 10px 5px 10px 10px;
+}
+
+.log_in {
+    display: inline-block;
+    background: #6388a5;
+    border-radius: 5px;
+    padding: 6px 13px 7px 8px;
+}
