--- a/12/global.css
+++ b/12/global.css
@@ -1,1 +1,22 @@
 /* Guess the font. Just get close--doesn't have to be perfect. */
+.left_stuff{
+  float: left;
+}
+img{
+  height: 100px;
+  width: 100px;
+  float: left;
+  margin: 10px;
+
+}
+.clear{
+  clear:both;
+}
+p{
+  font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  width: 100px;
+  float: left;
+  margin: 10px 0px 0px 0px;
+}
