--- a/06/global.css
+++ b/06/global.css
@@ -29,20 +29,32 @@ h1 {
 }
 
 .month {
+  padding: 20px 0 0 20px;
   background-color: #262626;
   color: #fff;
 }
 
-.festival {
+.month h3 {
+  padding: 0 0 0px 0;
+  text-decoration: underline;
+  text-transform: uppercase;
+  font-size: 22px;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+}
 
+.festival {
+  font-size: 14px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .festival a {
+  display: inline-block;
+  margin: 18px 0 4px 0;
   padding: 1px;
   background-color: #000;
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 16px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 }
