--- a/09/global.css
+++ b/09/global.css
@@ -2,13 +2,15 @@
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
 .button_container{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 600;
-  text-align: center;
-  background-color: #557592;
-  padding: 15px;
-  margin: 20px;
-  border-radius: 7px;
-  width: 154px;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 10px;
+    text-align: center;
+    background-color: #557592;
+    padding: 10px 10px;
+    margin: 9px 3px;
+    border-radius: 3px;
+    float: left;
 }
 
 a {
