--- a/11/global.css
+++ b/11/global.css
@@ -1,1 +1,16 @@
 /* Guess the font. Just get close--doesn't have to be perfect. */
+
+
+img {
+  padding: 5px 4px;
+  float: left;  
+}
+
+.icon_text {
+  padding-top: 9px;
+  font-size: 10px;
+  display: inline-block;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: Arial, sans-serif;  
+}
