--- a/08/global.css
+++ b/08/global.css
@@ -1,2 +1,66 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+h1 {
+  border-bottom: 1px solid #AD03A3;
+  padding: 20px 0 20px 0;
+  text-align: center;
+  background-color: #720D6B;
+  color: #fff;
+  font-size: 30px;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+}
+
+#intro {
+  border-bottom: 1px solid #9A9A9A;
+  background-color: #262626;
+  color: #fff;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+#intro h2 {
+  padding: 20px 0 0 0px;
+  text-align: center;
+  font-size: 20px;
+}
+
+#intro p {
+  padding: 9px 1px 20px 20px;
+}
+
+.month {
+  border-bottom: 1px solid #9A9A9A;
+  padding: 10px 0 22px 20px;
+  background-color: #262626;
+  color: #fff;
+}
+
+.month h3 {
+  padding: 10px 0 0 0;
+  text-decoration: underline;
+  text-transform: uppercase;
+  font-size: 22px;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+}
+
+.festival {
+  font-size: 14px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.festival a {
+  display: block;
+  margin: 16px 0 4px 0;
+  padding: 1px;
+  background-color: #000;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+.location {
+  display: inline-block;
+  background-color: #fff;
+  color: #000;
+}
