--- a/06/global.css
+++ b/06/global.css
@@ -56,9 +56,13 @@ h2 {
 
 }
 
+#intro p {
+  padding-bottom: 22px;
+}
+
 .month h3 {
-  padding-top: 22px;
-  font-size: 18pt;
+  padding-top: 20px;
+  font-size: 16pt;
   text-transform: uppercase;
   color: white;
   text-decoration: underline;
@@ -82,6 +86,7 @@ h2 {
   font-size: 10.5pt;
   line-height: 15px;
 }
-/*.multiple a {
-  margin-top: 15px;
-}*/
+.multiple a {
+  margin-top: 11px;
+}
+
