--- a/10/global.css
+++ b/10/global.css
@@ -1,1 +1,24 @@
 /* Actual font is unknown. Use any from past assignments. */
+/*everything is in a box*/
+.box{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: black;
+  background-color: white;
+  padding: 5px 5px 5px 5px;
+  margin: 6px 7px 0px 5px;
+  text-align: left;
+  width: 118px;
+  float: left;
+  border-right: solid 1px;
+}
+/*header for boxes*/
+h4 {
+  font-size: 16px;
+  font-weight: 600;
+  padding-bottom: 4px;
+}
+/*content of box*/
+.blurb{
+  font-size: 11px;
+  line-height: 1.4;
+}
